# rust-data-analysis

./: .gitignore  Cargo.toml  Justfile  README.md  book.toml  ideas.txt  todo.txt
.github/workflows/: publish.yml  test.yml
book_processor/: Cargo.toml
book_processor/src/: main.rs
examples/: 0_0_0_playground.rs  1_2_1_download.rs  1_2_1_download.sh  1_2_1_extract.rs  1_2_2_rename.rs  1_2_2_styling.rs  1_2_2_synthetic.rs  1_2_3_expand.rs  1_2_3_parquet.rs  1_2_3_synthetic.rs  1_2_4_expand.rs  1_2_4_large.rs  1_2_5_large.rs  1_2_5_sql.rs  1_2_6_large.rs  1_2_6_minio.rs  1_2_7_sql.rs  1_2_8_minio.rs  2_1_1_dataframe.rs  2_1_1_read_csv_eager.rs  2_1_2_read_csv_lazy.rs  2_1_3_read_parquet_eager.rs  2_1_4_read_parquet_lazy.rs  2_1_5_sql_to_polars.rs  2_1_read_csv_eager.rs  2_1_read_csv_lazy.rs  2_2_1_read_csv.rs  2_2_2_write_csv.rs  2_3_1_read_parquet.rs  2_3_2_sql_to_polars.rs  2_3_2_write_parquet.rs  2_3_3_write_partitioned_parquet.rs  2_4_1_postgresql.rs  2_4_2_sql_to_polars.rs  2_5_1_read_cloud.rs  2_5_2_write_cloud.rs  3_0_0_filter.rs  3_0_0_filter_opt.rs  3_0_0_select.rs  3_0_0_subsetting.rs  (+34 more)
src/: README.md  SUMMARY.md  polars.md  reading.md  useful_functions.md  writing.md
src/1_start/: 0_index.md  1_env.md  2_crates.md  3_data.md  4_concepts.md  concepts.md  crates.md  data.md  env.md  index.md
src/2_data/: 0_index.md  2_csv.md  3_parquet.md  4_databases.md  5_cloud.md  cloud.md  csv.md  databases.md  df.md  index.md  parquet.md
src/2_rw/: index.md  reprex.md
src/3_manipulate/: select.md
src/3_transformation/: 0_index.md  1_filter.md  2_select.md  3_variables.md  4_pivots.md  5_joins.md  filter.md  index.md  joins.md  pivots.md  select.md  variables.md
src/4_stats/: 0_index.md  1_summary.md  2_hypors.md  hypors.md  index.md  summary.md
src/5_pub/: 0_index.md  1_excel.md  2_plotting.md  3_reports.md  excel.md  index.md  plotting.md  reports.md
src/5_pub/images/report/: report.html
src/getting_started/: crates.md  data.md  index.md
src/manipulate/: joins.md  select.md  subsetting.md  variables.md
src/pub/: plotting.md  visualization.md
src/rw/: database.md  index.md  reading.md  writing.md
src/stats/: hypors.md  index.md  models.md  summary.md
src_main/1_start/: concepts.md  data.md
src_main/2_data/: csv.md
src_main/3_transformation/: filter.md
src_main/4_stats/: summary.md
