[package]
name = "rust-data-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]

# Download files from the internet (blocking)
reqwest = { version = "0.12", features = ["blocking"] }

# Extract ZIP files
zip = "4"

# Polars - open-source library for data manipulation
polars = { version = "0.50", features = [
    "lazy", # LazyFrame
    "parquet", # Parquet files
    "round_series", # Round values
    "replace", # Replace value
    "is_in", # List filter
    "pivot", # Pivot data
    "cum_agg", # Cumulative aggregate statistics
    "abs", # Absolute value
    "aws", # Read/write cloud (minio)
    "regex", # Call columns with regex
    "fmt", # Format tables as markdown
] }

# Move data in and out of PostgreSQL
postgres = "0.19"

# Move data from SQL to Polars (through Arrow)
connectorx = { git = "https://github.com/sfu-db/connector-x.git", features = ["src_postgres", "dst_polars"] }

# Hypothesis testing
hypors = "0.3.0"

# Read from minio / S3 bucket
aws-sdk-s3 =  { version = "1", features = ["behavior-version-latest"] }
tokio = "1"

# Convert data from one version of Polars to another version of Polars
df-interchange = { version = "0.2", features = ["polars_0_48", "polars_0_49", "polars_0_50"] }

# Manipulating Excel documents
polars_excel_writer = "0.17"
rust_xlsxwriter = "0.89"

# Plots
plotlars = {version = "0.10", features = ["static_export_geckodriver", "static_export_wd_download"] }

# Markdown documents
comrak = "0.41"